--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Aged",
-    "slug": "aged",
+    "name": "Peated",
+    "slug": "peated",
     "sdkVersion": "27.0.0"
   }
 }
