--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "babel-preset-react-native-stage-0": "^1.0.1",
     "eslint": "^5.2.0",
     "eslint-config-universe": "^1.0.7",
     "eslint-plugin-react-native": "^3.2.1",
@@ -31,8 +30,8 @@
   },
   "dependencies": {
     "prop-types": "^15.6.2",
-    "react": "16.3.1",
-    "react-native": "~0.55.4",
+    "react": "16.4.1",
+    "react-native": "^0.56.0",
     "react-native-elements": "^0.19.1",
     "react-native-fbsdk": "^0.7.0",
     "react-native-sentry": "^0.38.3",
