Connect firebase + facebook auth

--- a/app.json
+++ b/app.json
@@ -4,6 +4,14 @@
     "slug": "peated",
     "sdkVersion": "27.0.0"
   },
+  "firebase": {
+    "apiKey": "AIzaSyB_Mow_oIpRlvXGo_G6VTDEQpn1jcTaCRw",
+    "authDomain": "peated-1ff7b.firebaseapp.com",
+    "databaseURL": "https://peated-1ff7b.firebaseio.com",
+    "projectId": "peated-1ff7b",
+    "storageBucket": "peated-1ff7b.appspot.com",
+    "messagingSenderId": "534028188457"
+  },
   "name": "peated",
   "displayName": "Peated"
 }
