--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     ]
   },
   "dependencies": {
+    "firebase": "^5.3.0",
     "prop-types": "^15.6.2",
     "react": "16.4.1",
     "react-native": "^0.56.0",
@@ -40,6 +41,7 @@
     "react-navigation": "^2.9.3",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "thunk": "^0.0.1"
   }
