Overhaul usage of Firebase to wire up auth and checkin

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,6 +9,7 @@
         "lextudio.restructuredtext",
         "PeterJausovec.vscode-docker",
         "DavidAnson.vscode-markdownlint",
-        "toba.vsfire"
+        "toba.vsfire",
+        "smkamranqadri.vscode-bolt-language"
     ]
 }
