--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-jest": "^23.4.2",
+    "babel-plugin-jest-hoist": "^23.2.0",
     "eslint": "^5.2.0",
     "eslint-config-universe": "^1.0.7",
     "eslint-plugin-react-native": "^3.2.1",
+    "expect-firestore": "^1.0.1",
     "jest": "^23.4.2",
     "jest-react-native": "^18.0.0",
     "prettier": "^1.14.0",
-    "react-test-renderer": "16.3.1"
+    "react-test-renderer": "^16.4.2"
   },
   "eslintConfig": {
     "extends": "universe/native"
@@ -21,7 +24,10 @@
     "test": "jest"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
+    }
   },
   "rnpm": {
     "assets": [
@@ -29,8 +35,11 @@
     ]
   },
   "dependencies": {
+    "@babel/core": "7.0.0-beta.51",
+    "@babel/preset-env": "^7.0.0-beta.55",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-preset-react-native": "^5.0.2",
     "firebase": "^5.3.0",
-    "firebase-bolt": "^0.8.4",
     "prop-types": "^15.6.2",
     "react": "16.4.1",
     "react-native": "^0.56.0",
