--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-preset-react-native": "^5.0.2",
     "firebase": "^5.3.0",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "16.4.1",
     "react-native": "^0.56.0",
@@ -47,6 +48,7 @@
     "react-native-fbsdk": "^0.7.0",
     "react-native-sentry": "^0.38.3",
     "react-native-status-bar-height": "^2.0.0",
+    "react-native-timeago": "^0.4.0",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.9.3",
     "react-redux": "^5.0.7",
