--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-preset-react-native": "^5.0.2",
     "firebase": "^5.3.0",
+    "idx": "^2.4.0",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "16.4.1",
