A lot of stuff..
- Many components connected to the friend graph
- Initial cloud functions specifically for user.createdAt and checkins/feed
- Attempts at fixing yarn yelling at me (failed attempts)
- Firestore rules tests work again (disabled createdAt checks)

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ sentry.properties
 .expo/
 
 # dependencies
-/node_modules
+node_modules/
 
 # misc
 .env.local
@@ -27,8 +27,10 @@ firebase-debug.log*
 
 ## Build generated
 build/
+lib/
 DerivedData
 Index/
+.jest/
 
 ## Various settings
 *.pbxuser
