--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jest": "^23.4.2",
     "jest-react-native": "^18.0.0",
     "prettier": "^1.14.0",
+    "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.4.2"
   },
   "eslintConfig": {
@@ -21,13 +22,35 @@
     "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src/**/*.js",
+    "fblogin": "firebase login",
+    "predeploy": "npm run lint",
+    "deploy": "firebase deploy",
+    "deploy:db": "firebase deploy --only firestore",
+    "deploy:funcs": "firebase deploy --only functions",
+    "lint:funcs": "eslint src/functions/**/*.js",
+    "build:funcs": "npm run --prefix src/functions build",
+    "preserve:funcs": "npm run build:funcs",
+    "serve:funcs": "firebase serve --only functions"
   },
   "jest": {
     "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
     "transform": {
-      "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
-    }
+      "^.+\\.(js)$": "<rootDir>/node_modules/babel-jest",
+      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/lib/"
+    ],
+    "cacheDirectory": ".jest/cache"
   },
   "rnpm": {
     "assets": [
@@ -35,15 +58,17 @@
     ]
   },
   "dependencies": {
-    "@babel/core": "7.0.0-beta.51",
-    "@babel/preset-env": "^7.0.0-beta.55",
+    "@babel/core": "7.0.0-beta.47",
+    "@babel/preset-env": "^7.0.0-beta.47",
     "babel-core": "7.0.0-bridge.0",
     "babel-preset-react-native": "^5.0.2",
     "firebase": "^5.3.0",
+    "firebase-admin": "^5.13.1",
+    "firebase-functions": "^2.0.2",
     "idx": "^2.4.0",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
-    "react": "16.4.1",
+    "react": "16.4.2",
     "react-native": "^0.56.0",
     "react-native-elements": "^0.19.1",
     "react-native-fbsdk": "^0.7.0",
