--- a/package.json
+++ b/package.json
@@ -28,27 +28,19 @@
     "predeploy": "npm run lint",
     "deploy": "firebase deploy",
     "deploy:db": "firebase deploy --only firestore",
-    "deploy:funcs": "firebase deploy --only functions",
-    "lint:funcs": "eslint src/functions/**/*.js",
-    "build:funcs": "npm run --prefix src/functions build",
-    "preserve:funcs": "npm run build:funcs",
-    "serve:funcs": "firebase serve --only functions"
+    "deploy:funcs": "firebase deploy --only functions"
   },
   "jest": {
     "preset": "react-native",
     "moduleFileExtensions": [
-      "ts",
-      "tsx",
       "js"
     ],
     "transform": {
-      "^.+\\.(js)$": "<rootDir>/node_modules/babel-jest",
-      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      "\\.(js)$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
     },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(js)$",
     "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/lib/"
+      "/node_modules/"
     ],
     "cacheDirectory": ".jest/cache"
   },
