--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -11,6 +11,7 @@
         "DavidAnson.vscode-markdownlint",
         "toba.vsfire",
         "smkamranqadri.vscode-bolt-language",
-        "eg2.tslint"
+        "eg2.tslint",
+        "zhouronghui.propertylist"
     ]
 }
