Components for apollo

--- a/package.json
+++ b/package.json
@@ -52,15 +52,19 @@
   "dependencies": {
     "@babel/core": "7.0.0-beta.47",
     "@babel/preset-env": "^7.0.0-beta.47",
+    "apollo-boost": "^0.1.12",
+    "apollo-link-context": "^1.0.8",
     "babel-core": "7.0.0-bridge.0",
     "babel-preset-react-native": "^5.0.2",
     "firebase": "^5.3.0",
     "firebase-admin": "^5.13.1",
     "firebase-functions": "^2.0.2",
+    "graphql": "^0.13.2",
     "idx": "^2.4.0",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "16.4.2",
+    "react-apollo": "^2.1.9",
     "react-native": "^0.56.0",
     "react-native-elements": "^0.19.1",
     "react-native-fbsdk": "^0.7.0",
